/*
 * $Id: ChangeLog,v 1.616 2009-09-23 18:50:46 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2009-09-23 14:43 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/makelib.bat
  * source/makelib_mingw.bat
  * compile.bat
  * compile_mingw.bat
    * updated in order to use mingw by default.  


2009-09-19 14:18 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_splitbox.ch
    ! Included HORIZONTAL like VERTICAL one.
      Note: Both works in the same way.

2009-09-14 22:29 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
  * source/h_form.prg
    ! Fixed MDI accelerator keys.

2009-09-13 22:59 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_activex.prg
  * source/c_activex.c
    ! fixed problem to run in new harbour.

2009-09-12 15:16 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_init.prg
  * include/oohg.ch
    * more testing gui mode init

2009-09-11 19:31 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Prevents nested edition activated by ENTER key.

2009-09-10 21:47 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
  * source/h_monthcal.prg
  * source/h_toolbar.prg
  * source/h_tree.prg
    ! Few cast added.

2009-09-09 15:16 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_report.prg
    ! removed double #include oohg.ch
  * source/h_init.prg
    * testing gui mode init
  * source/h_error.prg
    * updated version    
  * include/oohg.ch
    * testing gui mode init


2009-08-25 19:56 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    ! Fixed duplicated functions.
  * source/h_hotkeybox.prg
    ! Added missing definitions.

2009-08-23 21:33 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_ipaddress.prg
  * source/c_grid.c
  * source/h_listbox.prg
  * source/h_tab.prg